--- a/index.html
+++ b/index.html
@@ -97,132 +97,64 @@
 
       </div>
     </section>
-          
-   <!-- Projects -->
-<section class="projects" id="projects">
-    <h2>Projects</h2>
-    <div style="clear:both;"></div>
-
-    <div id="projects-container" class="projects-container">
-
-        <div class="project-card">
-            <h3>EasyApply</h3>
-            <p><strong>Période :</strong> Oct 2022 - Mai 2023</p>
-            <p><strong>Technologies :</strong> HTML/CSS, PHP, SQL, GitLab</p>
-            <ul>
-                <li>Site web de gestion des candidatures</li>
-                <li>Compétences en innovation, développement de produits et présentation efficace</li>
-            </ul>
-            <p><a href="https://gitlab.com/mon-projet-easyapply" target="_blank">Voir sur GitLab</a></p>
-        </div>
-        <hr>
-
-        <div class="project-card">
-            <h3>Optimiseur de courses: cuisine sans gaspillage</h3>
-            <p><strong>Période :</strong> Fév 2023 - Avr 2023</p>
-            <p><strong>Technologies :</strong> Java, JavaFX, GitHub</p>
-            <ul>
-                <li>Organise le contenu du réfrigérateur</li>
-                <li>Planifie les recettes en fonction des ingrédients disponibles</li>
-                <li>Optimise l'achat des aliments nécessaires</li>
-            </ul>
-            <p><a href="https://github.com/mon-projet-cuisine" target="_blank">Voir sur GitHub</a></p>
-        </div>
-        <hr>
-
-        <div class="project-card">
-            <h3>Estimation du score de film</h3>
-            <p><strong>Période :</strong> Fév 2023 - Avr 2023</p>
-            <p><strong>Technologies :</strong> Python, Machine Learning</p>
-            <ul>
-                <li>Prédiction des notes de films sur IMDB</li>
-                <li>Maîtrise de l'apprentissage statistique</li>
-                <li>Compétences en exploration de données et en modélisation</li>
-            </ul>
-            <p><a href="https://github.com/mon-projet-film" target="_blank">Voir sur GitHub</a></p>
-        </div>
-        <hr>
-
-        <div class="project-card">
-            <h3>Flappy Bird et Flowercraft</h3>
-            <p><strong>Période :</strong> Jan 2023 - Avr 2023</p>
-            <p><strong>Technologies :</strong> Java, Java Swing, GitLab</p>
-            <ul>
-                <li>Programmation concurrente et interfaces utilisateur graphiques</li>
-                <li>Planification, affectation des tâches, implémentation, tests et documentation</li>
-                <li>Utilisation de l'architecture MVC</li>
-            </ul>
-            <p><a href="https://gitlab.com/mon-projet-jeu" target="_blank">Voir sur GitLab</a></p>
-        </div>
-
-    </div>
-</section>
-<div style="clear:both;"></div>
-<!-- Projects -->
-<section class="projects" id="projects">
-    <h2 class="section-title">Projects</h2>
-    <div id="projects-container" class="projects-container">
-
-        <div class="project-card">
-            <h3 class="project-title">EasyApply</h3>
-            <p class="project-period"><strong>Période :</strong> Oct 2022 - Mai 2023</p>
-            <p class="project-tech"><strong>Technologies :</strong> HTML/CSS, PHP, SQL, GitLab</p>
-            <ul class="project-list">
-                <li>Site web de gestion des candidatures</li>
-                <li>Compétences en innovation, développement de produits et présentation efficace</li>
-            </ul>
-            <p class="project-link"><a href="https://gitlab.com/mon-projet-easyapply" target="_blank">Voir sur GitLab</a></p>
-        </div>
-
-        <hr class="project-divider">
-
-        <div class="project-card">
-            <h3 class="project-title">Optimiseur de courses: cuisine sans gaspillage</h3>
-            <p class="project-period"><strong>Période :</strong> Fév 2023 - Avr 2023</p>
-            <p class="project-tech"><strong>Technologies :</strong> Java, JavaFX, GitHub</p>
-            <ul class="project-list">
-                <li>Organise le contenu du réfrigérateur</li>
-                <li>Planifie les recettes en fonction des ingrédients disponibles</li>
-                <li>Optimise l'achat des aliments nécessaires</li>
-            </ul>
-            <p class="project-link"><a href="https://github.com/mon-projet-cuisine" target="_blank">Voir sur GitHub</a></p>
-        </div>
-
-    </div>
-</section>
-<!-- Projects -->
-<section class="projects" id="projects">
-  <h2 class="section-title">Projects</h2>
-  <div id="projects-container" class="projects-container">
-
-      <div class="project-card">
-          <h3 class="project-title">EasyApply</h3>
-          <p class="project-period"><strong>Période :</strong> Oct 2022 - Mai 2023</p>
-          <p class="project-tech"><strong>Technologies :</strong> HTML/CSS, PHP, SQL, GitLab</p>
-          <ul class="project-list">
-              <li>Site web de gestion des candidatures</li>
-              <li>Compétences en innovation, développement de produits et présentation efficace</li>
-          </ul>
-          <p class="project-link"><a href="https://gitlab.com/mon-projet-easyapply" target="_blank">Voir sur GitLab</a></p>
+           <!-- projects -->
+    <section class="projects" id="projects">
+      <h2>Projects</h2>
+      <div class="projects-container">
+  
+          <div class="project-card">
+              <h3>EasyApply</h3>
+              <p><strong>Période :</strong> Oct 2022 - Mai 2023</p>
+              <p><strong>Technologies :</strong> HTML/CSS, PHP, SQL, GitLab</p>
+              <ul>
+                  <li>Site web de gestion des candidatures</li>
+                  <li>Compétences en innovation, développement de produits et présentation efficace</li>
+              </ul>
+              <p><a href="https://gitlab.com/mon-projet-easyapply" target="_blank">Voir sur GitLab</a></p>
+          </div>
+          <hr>
+  
+          <div class="project-card">
+              <h3>Optimiseur de courses: cuisine sans gaspillage</h3>
+              <p><strong>Période :</strong> Fév 2023 - Avr 2023</p>
+              <p><strong>Technologies :</strong> Java, JavaFX, GitHub</p>
+              <ul>
+                  <li>Organise le contenu du réfrigérateur</li>
+                  <li>Planifie les recettes en fonction des ingrédients disponibles</li>
+                  <li>Optimise l'achat des aliments nécessaires</li>
+              </ul>
+              <p><a href="https://github.com/mon-projet-cuisine" target="_blank">Voir sur GitHub</a></p>
+          </div>
+          <hr>
+  
+          <div class="project-card">
+              <h3>Estimation du score de film</h3>
+              <p><strong>Période :</strong> Fév 2023 - Avr 2023</p>
+              <p><strong>Technologies :</strong> Python, Machine Learning</p>
+              <ul>
+                  <li>Prédiction des notes de films sur IMDB</li>
+                  <li>Maîtrise de l'apprentissage statistique</li>
+                  <li>Compétences en exploration de données et en modélisation</li>
+              </ul>
+              <p><a href="https://github.com/mon-projet-film" target="_blank">Voir sur GitHub</a></p>
+          </div>
+          <hr>
+  
+          <div class="project-card">
+              <h3>Flappy Bird et Flowercraft</h3>
+              <p><strong>Période :</strong> Jan 2023 - Avr 2023</p>
+              <p><strong>Technologies :</strong> Java, Java Swing, GitLab</p>
+              <ul>
+                  <li>Programmation concurrente et interfaces utilisateur graphiques</li>
+                  <li>Planification, affectation des tâches, implémentation, tests et documentation</li>
+                  <li>Utilisation de l'architecture MVC</li>
+              </ul>
+              <p><a href="https://gitlab.com/mon-projet-jeu" target="_blank">Voir sur GitLab</a></p>
+          </div>
+  
       </div>
-
-      <hr class="project-divider">
-
-      <div class="project-card">
-          <h3 class="project-title">Optimiseur de courses: cuisine sans gaspillage</h3>
-          <p class="project-period"><strong>Période :</strong> Fév 2023 - Avr 2023</p>
-          <p class="project-tech"><strong>Technologies :</strong> Java, JavaFX, GitHub</p>
-          <ul class="project-list">
-              <li>Organise le contenu du réfrigérateur</li>
-              <li>Planifie les recettes en fonction des ingrédients disponibles</li>
-              <li>Optimise l'achat des aliments nécessaires</li>
-          </ul>
-          <p class="project-link"><a href="https://github.com/mon-projet-cuisine" target="_blank">Voir sur GitHub</a></p>
-      </div>
-
-  </div>
-</section>
-
+  </section>
+  
 
     <!-- Recommendations -->
     <section id="recommendations">
