--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
            <!-- projects -->
     <section class="projects" id="projects">
       <h2>Projects</h2>
+
       <div class="projects-container">
   
           <div class="project-card">
@@ -110,7 +111,7 @@
                   <li>Site web de gestion des candidatures</li>
                   <li>Compétences en innovation, développement de produits et présentation efficace</li>
               </ul>
-              <p><a href="https://gitlab.com/mon-projet-easyapply" target="_blank">Voir sur GitLab</a></p>
+              <p><a href="https://github.com/yangx219/EasyApply" target="_blank">Voir sur GitHub</a></p>
           </div>
           <hr>
   
@@ -123,7 +124,7 @@
                   <li>Planifie les recettes en fonction des ingrédients disponibles</li>
                   <li>Optimise l'achat des aliments nécessaires</li>
               </ul>
-              <p><a href="https://github.com/mon-projet-cuisine" target="_blank">Voir sur GitHub</a></p>
+              <p><a href="https://github.com/yangx219/Optimiseur-de-courses" target="_blank">Voir sur GitHub</a></p>
           </div>
           <hr>
   
@@ -136,7 +137,6 @@
                   <li>Maîtrise de l'apprentissage statistique</li>
                   <li>Compétences en exploration de données et en modélisation</li>
               </ul>
-              <p><a href="https://github.com/mon-projet-film" target="_blank">Voir sur GitHub</a></p>
           </div>
           <hr>
   
@@ -149,7 +149,7 @@
                   <li>Planification, affectation des tâches, implémentation, tests et documentation</li>
                   <li>Utilisation de l'architecture MVC</li>
               </ul>
-              <p><a href="https://gitlab.com/mon-projet-jeu" target="_blank">Voir sur GitLab</a></p>
+              <p><a href="https://github.com/yangx219/FlowerCraft" target="_blank">Voir sur GitHub</a></p>
           </div>
   
       </div>
