--- a/index.html
+++ b/index.html
@@ -102,6 +102,80 @@
       <h2>Projects</h2>
 
       <div class="projects-container">
+
+        <div class="project-card">
+          <h3>Site Web de Portfolio Personnel</h3>
+          <p><strong>Période :</strong> Janvier 2025</p>
+          <p><strong>Technologies :</strong> HTML, CSS, JavaScript</p>
+          <ul>
+            <li>Conception et développement d’un portfolio responsive pour présenter les compétences, projets et recommandations.</li>
+            <li>Ajout d’interactions dynamiques, y compris un formulaire de soumission de recommandations et des animations de défilement.</li>
+            <li>Présentation des projets avec des cartes détaillées et des liens vers les dépôts GitHub pour explorer le code et les démos.</li>
+            <li>Visualisation des compétences techniques pour une meilleure lisibilité et une expérience utilisateur interactive.</li>
+          </ul>
+          <p><a href="https://yangx219.github.io/YANGXue-portfolio/" target="_blank">Voir sur GitHub</a></p>
+        </div>
+        <hr>
+
+
+        <div class="project-card">
+          <h3>Drum Kit</h3>
+          <p><strong>Période :</strong> Janvier 2025</p>
+          <p><strong>Technologies :</strong> HTML, CSS, JavaScript</p>
+          <ul>
+              <li>Développement d'une application interactive de simulation de batterie en ligne.</li>
+              <li>Utilisation des événements de clics et de touches clavier pour produire des sons en temps réel.</li>
+              <li>Intégration des fichiers audio pour reproduire différents sons de batterie (tom, snare, kick, crash).</li>
+              <li>Ajout d'animations visuelles pour améliorer l'interaction utilisateur.</li>
+              <li>Renforcement des compétences en manipulation DOM et gestion des événements en JavaScript.</li>
+          </ul>
+          <p><a href="https://yangx219.github.io/Drum_Kit_Project/" target="_blank">Voir sur GitHub</a></p>
+        </div>
+        </ul>
+
+        <div class="project-card">
+          <h3>Dicee Project</h3>
+          <p><strong>Période :</strong> Janvier 2025</p>
+          <p><strong>Technologies :</strong> HTML, CSS, JavaScript</p>
+          <ul>
+            <li>Création d'une application interactive de jeu.</li>
+            <li>Utilisation de JavaScript pour générer des résultats aléatoires et mettre à jour dynamiquement l'interface utilisateur.</li>
+            <li>Design minimaliste et intuitif permettant une expérience utilisateur fluide.</li>
+            <li>Apprentissage et application des principes fondamentaux de manipulation DOM et d'événements en JavaScript.</li>
+        </ul>
+          <p><a href="https://yangx219.github.io/Dicee_Project/" target="_blank">Voir sur GitHub</a></p>
+        </div>
+        <hr>
+
+        <div class="project-card">
+          <h3>FixNow</h3>
+          <p><strong>Période :</strong> Avril 2024</p>
+          <p><strong>Technologies :</strong> Java, Servlet, Tomcat, MySQL, Google Maps API</p>
+          <ul>
+              <li>Développement d'une application web pour connecter clients et réparateurs en cas de besoins urgents.</li>
+              <li>Implémentation d'un système de gestion des profils, des demandes de réparation, et des évaluations des services.</li>
+              <li>Intégration de l'API Google Maps pour la géolocalisation des utilisateurs et l'affichage des réparateurs à proximité.</li>
+              <li>Gestion des interactions client-serveur via des requêtes HTTP (POST, GET, PUT, DELETE).</li>
+          </ul>
+          <p><a href="https://github.com/yangx219/fixNow" target="_blank">Voir sur Github</a></p>
+        </div>
+        <hr>
+
+
+        <div class="project-card">
+          <h3>Super Dog</h3>
+          <p><strong>Période :</strong> Mars 2024</p>
+          <p><strong>Technologies :</strong> HTML5, CSS3, JavaScript</p>
+          <ul>
+              <li>Création d'un jeu vidéo 2D de plateforme basé sur l'élément <code>&lt;canvas&gt;</code></li>
+              <li>Implémentation de la logique de collision, animations fluides et algorithmes de mouvement</li>
+              <li>Utilisation d'une structure modulaire en JavaScript pour une gestion claire et scalable</li>
+          </ul>
+          <p><a href="https://yangx219.github.io/Super_Dog/" target="_blank">Voir sur GitHub</a></p>
+         </div>
+         <hr>
+
+         
   
           <div class="project-card">
               <h3>EasyApply</h3>
@@ -151,8 +225,12 @@
               </ul>
               <p><a href="https://github.com/yangx219/FlowerCraft" target="_blank">Voir sur GitHub</a></p>
           </div>
+          <hr>
+
+         
   
       </div>
+
   </section>
   
 
