--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
         </div>
 
         <div class="skill">
+          <img src="html_finalprojimages/git.png"/>
+          <h6>GIT</h6>
+          
+        </div>
+
+        <div class="skill">
           <img src="html_finalprojimages/sql-logo.png"/>
           <h6>SQL</h6>
           
