--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
         </div>
 
         <div class="skill">
+          <img src="html_finalprojimages/docker.png"/>
+          <h6>Docker</h6>
+          
+        </div>
+
+        <div class="skill">
           <img src="html_finalprojimages/sql-logo.png"/>
           <h6>SQL</h6>
           
